<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileEditActivity">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_edit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/registerText"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints="password"
        android:inputType="phone"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"/>

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgainEditText"
        app:layout_constraintVertical_bias="0.26">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:onClick="onEdit"
            android:text="@string/edit" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:onClick="onCancel"
            android:text="@string/cancel" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>