<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/placeholder_item_image" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/placeholder_product_name"
            android:textColor="?android:textColorSecondary"
            android:textSize="19sp"
            />
        <!--
        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemName"
            android:padding="8dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />
        -->
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemName"
            android:layout_marginBottom="12dp"
            android:text="@string/placeholder_item_price"
            android:padding="8dp"
            android:layout_centerHorizontal="false"
            android:textSize="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/price"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <Button
                android:id="@+id/add_to_favorite"
                style="?attr/materialIconButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:padding="15sp"
                app:icon="@drawable/favorite_24px"
                app:iconSize="25sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="15sp"
                android:padding="15sp"
                android:layout_alignParentRight="true"
                android:onClick="addToCart"

                android:text="@string/into_cart"
                android:textSize="18sp"
                app:icon="@drawable/shopping_basket_24px"
                app:iconSize="25sp" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>