<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/placeholder_item_image" />
            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_product_name"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/placeholder_item_price"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp"
            android:gravity=""
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/remove_from_cart"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/delete_24px"
                    app:iconSize="25sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/remove_from_quantity"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/remove_24px"
                    app:iconSize="25sp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_quantity"
                    android:textSize="15dp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"/>

                <Button
                    android:id="@+id/add_to_quantity"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remove_from_quantity"
                    app:icon="@drawable/add_24px"
                    app:iconSize="25sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>